# Talks

./: .gitignore  Makefile  README.org  flake.nix
Epitech_MAT/: Epitech.tex  README.org
Epitech_MAT/101pong/: Bootstrap.org  FollowUp.org
Epitech_MAT/102architect/: Bootstrap.org  FollowUp.org  KickOff.org
Epitech_MAT/103cipher/: Bootstrap.org  FollowUp.org  KickOff.org
Epitech_MAT/105torus/: Bootstrap.org
Epitech_MAT/106bombyx/: Bootstrap.org
Epitech_MAT/108trigo/: Bootstrap.org
Epitech_MAT/109titration/: Bootstrap.org
Epitech_MAT/110borwein/: Bootstrap.org
Epitech_MAT/201yams/: Bootstrap.org
Epitech_MAT/202unsold/: Bootstrap.org
Epitech_MAT/203hotline/: Bootstrap.org
Epitech_MAT/204ducks/: Bootstrap.org
Epitech_MAT/206neutrinos/: Bootstrap.org
Epitech_MAT/207demography/: Bootstrap.org
Epitech_MAT/208dowels/: Bootstrap.org
Epitech_MAT/304pacman/: Bootstrap.org
Epitech_MAT/305construction/: Bootstrap.org
Epitech_MAT/306radiator/: Bootstrap.org  KickOff.org
Epitech_MAT/307multigrains/: Bootstrap.org
Epitech_MAT/308reedpipes/: Bootstrap.org
Epitech_MAT/309pollution/: Bootstrap.org
Epitech_PSU/: Bootstrap.org  Bootstrap_FTrace.org  Bootstrap_STrace.org  README.org  UnitPresentation.org
Malloc/: README.org  Talk.org  Talk_Algorithms.org
Malloc/examples/: CMakeLists.txt
Malloc/examples/include/: list.h  utils.h
Malloc/examples/src/: 1_alloc_automatique.c  2_alloc_statique.c  3_alloc_dynamique.c  4_alloc_dynamique_test.c  5_my_malloc_list.c  list.c
package/: Algorithms.tex  Mathematics.tex
template/: Beamer.org
(+4 files in other folders)
